--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Arashi no naka de</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
-  <header class="bg-indigo-100 py-6 text-center shadow">
-    <h1 class="text-3xl font-bold text-indigo-700">Arashi no naka de</h1>
+  <header class="py-6 text-center shadow">
+    <h1 class="title">Arashi no naka de</h1>
   </header>
 
   <main class="max-w-3xl mx-auto p-6">
