--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Arashi no naka de</title>
   <link rel="stylesheet" href="style.css">
+
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            blue: {
+              primary: '#345364',
+              secondary: '#08315c',
+              back: '#08315c18',
+            },
+          },
+        },
+      },
+    };
+  </script>
 </head>
 <body class="text-gray-800 font-sans">
 
   <header class="py-6 text-center">
-    <h1 class="title">Arashi no naka de</h1>
+    <h1 class="title text-7xl md:text-8xl">Arashi no naka de</h1>
     <div class="inset-x-0 flex justify-center mt-6">
       <nav class="bg-white shadow-md rounded-xl px-8 py-3">
         <ul class="flex space-x-8 text-gray-800 text-lg font-medium">
-          <li><a href="#" class="hover:text-blue-600 transition">Inicio</a></li>
-          <li><a href="#" class="hover:text-blue-600 transition">Listado</a></li>
-          <li><a href="#" class="hover:text-blue-600 transition">Sobre mí</a></li>
+          <li><a href="#" class="hover:text-blue-secondary transition">Inicio</a></li>
+          <li><a href="#" class="hover:text-blue-secondary transition">Listado</a></li>
+          <li><a href="#" class="hover:text-blue-secondary transition">Sobre mí</a></li>
         </ul>
       </nav>
     </div>
@@ -29,7 +45,9 @@
       <div class=" flex justify-center items-center h-24">
         <p class="italic">«La verdad que desaparece como una mentira... [en progreso...]»</p>
       </div>
-      <div class="flex justify-end"><a href="#">Leer más</a></div>
+      <div class="flex justify-end">
+        <a href="#" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+      </div>
     </div>
   </main>
 
