Remove "en progreso..."

--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
     <div class="min-h-[200px] max-h-[400px] p-8 bg-white rounded-lg shadow-sm">
       <h3 class="post-title text-3xl"><a href="5x10/truth.html">[Letra] Arashi - truth</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="5x10/truth.html">«La verdad que desaparece como una mentira... [en progreso...]»</a></p>
+        <p class="italic"><a href="5x10/truth.html">«La verdad que desaparece como una mentira...»</a></p>
       </div>
       <div class="flex justify-end">
         <a href="5x10/truth.html" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
