--- a/site/about.html
+++ b/site/about.html
@@ -14,8 +14,8 @@
   <body class="text-gray-800 font-sans">
     <header-component></header-component>
     <main class="max-w-6xl mx-auto pb-6 pt-3">
-      <div class="bg-white p-12 rounded-lg shadow-sm">
-      <h2 class="post-title text-3xl">Acerca de <i>Arashi no naka de</i></h2>
+      <div class="bg-white p-6 md:p-12 rounded-lg shadow-sm">
+      <h2 class="post-title text-2xl md:text-3xl">Acerca de <i>Arashi no naka de</i></h2>
       <div class="post-body pt-7 [&>p]:mb-4">
         <p>¡Hola! Soy Teresa, ¡muchas gracias por visitar <i>Arashi no naka de</i>!</p>
         <p>Este es un proyecto personal heredero del blog <a href="https://yasashiiuta05.blogspot.com" target="_blank" class="text-blue-link">Yasashii Uta</a>, que creé en 2011 y que, aunque con menos actividad, ha seguido activo hasta 2025. Sin embargo, varios problemas con la política de contenidos de Google me hicieron replantearme la continuidad del blog, por lo que decidí dejarlo inactivo (pero disponible mientras Google mantenga Blogger) y moverme a Neocities, aunque con otro enfoque.</p>
