--- a/site/list.html
+++ b/site/list.html
@@ -19,7 +19,7 @@
       <h2 class="post-title text-2xl md:text-3xl">Listado de traducciones</h2>
       <div class="post-body pt-7">
         <div class="img-container">
-            <img src="/images/arashi.jpg" alt="Arashi" class="max-w-[80%] mx-auto"> 
+            <img src="/images/arashi.jpg" alt="Arashi" class="md:max-w-[80%] mx-auto"> 
         </div>
         <div class="text-center my-6">
             <div id="list-type-btn" class="inline-flex">
