Load lyrics from json

--- a/site/list.html
+++ b/site/list.html
@@ -35,26 +35,26 @@
         <div class="mb-4">
             <div class="font-bold">5x20 All the BEST!! 1999-2019</div>
             <ul>
-                <li><a href="/5x10/truth.html" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/5x10/truth.json" class="text-blue-link">truth</a></li>
             </ul>
         </div>
         <div class="mb-4">
             <div class="font-bold">5x10 All the BEST! 1999-2009</div>
             <ul>
-                <li><a href="/5x10/truth.html" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/5x10/truth.json" class="text-blue-link">truth</a></li>
             </ul>
         </div>
         <div class="mb-4">
             <div class="font-bold">truth/Kaze no mukou e</div>
             <ul>
-                <li><a href="/5x10/truth.html" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/5x10/truth.json" class="text-blue-link">truth</a></li>
             </ul>
         </div>
         </div>
         <div id="alphabetical-list" hidden>
             <div class="font-bold">T</div>
             <ul>
-                <li><a href="/5x10/truth.html" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/5x10/truth.json" class="text-blue-link">truth</a></li>
             </ul>
         </div>
       </div>
