--- a/site/lyrics.html
+++ b/site/lyrics.html
@@ -11,6 +11,7 @@
     <script type="module" src="/components/header/header-component.js"></script>
     <script type="module" src="/components/footer/footer-component.js"></script>
     <script type="module" src="/components/lyrics/lyrics-component.js"></script>
+    <script type="text/javascript" src="/scripts/lyrics.js"></script>
 
   </head>
   <body class="text-gray-800 font-sans">
