--- a/site/lyrics.html
+++ b/site/lyrics.html
@@ -10,14 +10,23 @@
 
     <script type="module" src="/components/header/header-component.js"></script>
     <script type="module" src="/components/footer/footer-component.js"></script>
-    <script type="module" src="/components/lyrics/lyrics-component.js"></script>
     <script type="text/javascript" src="/scripts/lyrics.js"></script>
 
   </head>
   <body class="text-gray-800 font-sans">
     <header-component></header-component>
     <main class="max-w-6xl mx-auto pb-6 pt-3">
-      <lyrics-component></lyrics-component>
+      <div class="bg-white p-6 md:p-12 rounded-lg shadow-sm">
+        <h2 class="post-title text-2xl md:text-3xl"></h2>
+
+        <div class="post-body pt-7">
+          <div class="intro pb-5"></div>
+          <hr class="w-2/3 mx-auto my-5" />
+          <div class="content py-3 text-center">Cargando...</div>
+          <hr class="w-2/3 mx-auto my-5" />
+          <div class="info pt-5"></div>
+        </div>
+      </div>
     </main>
     <footer-component></footer-component>
   </body>
