--- a/site/index.html
+++ b/site/index.html
@@ -16,12 +16,12 @@
  <header-component></header-component>
   <main class="max-w-3xl mx-auto pb-6 pt-3">
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm">
-      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=/5x10/truth.json">[Letra] Arashi - truth</a></h3>
+      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=/5x10/truth">[Letra] Arashi - truth</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=/5x10/truth.json">«La verdad que desaparece como una mentira...»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=/5x10/truth">«Esta es la verdad que desaparece como una mentira...»</a></p>
       </div>
       <div class="flex justify-end">
-        <a href="/lyrics.html?song=/5x10/truth.json" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+        <a href="/lyrics.html?song=/5x10/truth" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
       </div>
     </div>
   </main>
