add italic working :DD

--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,15 @@
  <header-component></header-component>
   <main class="max-w-3xl mx-auto pb-6 pt-3">
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm">
+      <h3 class="post-title text-2xl md:text-3xl"><a href="">[Letra] Arashi - Bokura ga tsunaideiku [en progreso]</a></h3>
+      <div class=" flex justify-center items-center h-24">
+        <p class="italic"><a href="">«Las épocas cambian, el tiempo pasa y, aunque persigamos un mañana distinto, sin duda algún día volveremos a este camino.»</a></p>
+      </div>
+      <div class="flex justify-end">
+        <a href="" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+      </div>
+    </div>
+    <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mt-5">
       <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=/5x10/truth">[Letra] Arashi - truth</a></h3>
       <div class=" flex justify-center items-center h-24">
         <p class="italic"><a href="/lyrics.html?song=/5x10/truth">«Esta es la verdad que desaparece como una mentira...»</a></p>
