Añadir a listado, pequeño fix info

--- a/site/list.html
+++ b/site/list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de traducciones | Arashi no naka de</title>
+    <title>Listado de letras y traducciones | Arashi no naka de</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript" src="/scripts/tailwind-config.js"></script>
@@ -39,6 +39,12 @@
             </ul>
         </div>
         <div class="mb-4">
+            <div class="font-bold">Japonism</div>
+            <ul>
+                <li><a href="/lyrics.html?song=/japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
+            </ul>
+        </div>
+        <div class="mb-4">
             <div class="font-bold">5x10 All the BEST! 1999-2009</div>
             <ul>
                 <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
@@ -52,10 +58,18 @@
         </div>
         </div>
         <div id="alphabetical-list" hidden>
-            <div class="font-bold">T</div>
-            <ul>
-                <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
-            </ul>
+             <div class="mb-4">
+                <div class="font-bold">B</div>
+                <ul>
+                    <li><a href="/lyrics.html?song=/japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
+                </ul>
+            </div>
+            <div class="mb-4">
+                <div class="font-bold">T</div>
+                <ul>
+                    <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
+                </ul>
+            </div>
         </div>
       </div>
       </div>
