--- a/site/list.html
+++ b/site/list.html
@@ -16,7 +16,7 @@
     <header-component></header-component>
     <main class="max-w-6xl mx-auto pb-6 pt-3">
       <div class="bg-white p-6 md:p-12 rounded-lg shadow-sm">
-      <h2 class="post-title text-2xl md:text-3xl">Listado de traducciones</h2>
+      <h2 class="post-title text-2xl md:text-3xl">Listado de letras y traducciones</h2>
       <div class="post-body pt-7">
         <div class="img-container">
             <img src="/images/arashi.jpg" alt="Arashi" class="md:max-w-[80%] mx-auto"> 
