Move json files to new folder, update about, update add_italic

--- a/site/list.html
+++ b/site/list.html
@@ -35,25 +35,25 @@
         <div class="mb-4">
             <div class="font-bold">5x20 All the BEST!! 1999-2019</div>
             <ul>
-                <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/arashi/5x10/truth" class="text-blue-link">truth</a></li>
             </ul>
         </div>
         <div class="mb-4">
             <div class="font-bold">Japonism</div>
             <ul>
-                <li><a href="/lyrics.html?song=/japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
+                <li><a href="/lyrics.html?song=/arashi/japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
             </ul>
         </div>
         <div class="mb-4">
             <div class="font-bold">5x10 All the BEST! 1999-2009</div>
             <ul>
-                <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/arashi/5x10/truth" class="text-blue-link">truth</a></li>
             </ul>
         </div>
         <div class="mb-4">
             <div class="font-bold">truth/Kaze no mukou e</div>
             <ul>
-                <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/arashi/5x10/truth" class="text-blue-link">truth</a></li>
             </ul>
         </div>
         </div>
@@ -61,13 +61,13 @@
              <div class="mb-4">
                 <div class="font-bold">B</div>
                 <ul>
-                    <li><a href="/lyrics.html?song=/japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
+                    <li><a href="/lyrics.html?song=/arashi/japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
                 </ul>
             </div>
             <div class="mb-4">
                 <div class="font-bold">T</div>
                 <ul>
-                    <li><a href="/lyrics.html?song=/5x10/truth" class="text-blue-link">truth</a></li>
+                    <li><a href="/lyrics.html?song=/arashi/5x10/truth" class="text-blue-link">truth</a></li>
                 </ul>
             </div>
         </div>
