Restructure scripts, add Tsunagu lyrics

--- a/site/list.html
+++ b/site/list.html
@@ -36,6 +36,19 @@
             <div class="font-bold">5x20 All the BEST!! 1999-2019</div>
             <ul>
                 <li><a href="/lyrics.html?song=/arashi/5x10/truth" class="text-blue-link">truth</a></li>
+                <li><a href="/lyrics.html?song=/arashi/untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
+            </ul>
+        </div>
+        <div class="mb-4">
+            <div class="font-bold">untitled</div>
+            <ul>
+                <li><a href="/lyrics.html?song=/arashi/untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
+            </ul>
+        </div>
+            <div class="mb-4">
+            <div class="font-bold">Tsunagu</div>
+            <ul>
+                <li><a href="/lyrics.html?song=/arashi/untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
             </ul>
         </div>
         <div class="mb-4">
@@ -68,6 +81,7 @@
                 <div class="font-bold">T</div>
                 <ul>
                     <li><a href="/lyrics.html?song=/arashi/5x10/truth" class="text-blue-link">truth</a></li>
+                    <li><a href="/lyrics.html?song=/arashi/untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
                 </ul>
             </div>
         </div>
