Modify scripts, add Mukae ni iku yo

--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,15 @@
  <header-component></header-component>
   <main class="max-w-3xl mx-auto pb-6 pt-3">
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
+      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">[Letra] Arashi - Mukae ni iku yo</a></h3>
+      <div class=" flex justify-center items-center h-24">
+        <p class="italic"><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">«Aunque no entendamos la lógica, mientras haya un camino en el que seguir, vivámoslo tal como es y continuemos.»</a></p>
+      </div>
+      <div class="flex justify-end">
+        <a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+      </div>
+    </div>
+    <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
       <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=untitled/tsunagu">[Letra] Arashi - Tsunagu</a></h3>
       <div class=" flex justify-center items-center h-24">
         <p class="italic"><a href="/lyrics.html?song=untitled/tsunagu">«Cuanto más lo persigues, más te duele, no puedes fingir que no lo sabes.»</a></p>
