--- a/site/list.html
+++ b/site/list.html
@@ -57,6 +57,12 @@
                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
             </ul>
         </div>
+           <div class="mb-4">
+            <div class="font-bold">Boku no Miteiru Fuukei</div>
+            <ul>
+                <li><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo" class="text-blue-link">Mukae ni iku yo</a></li>
+            </ul>
+        </div>
         <div class="mb-4">
             <div class="font-bold">5x10 All the BEST! 1999-2009</div>
             <ul>
@@ -75,6 +81,12 @@
                 <div class="font-bold">B</div>
                 <ul>
                     <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku" class="text-blue-link">Bokura ga tsunaideiku</a></li>
+                </ul>
+            </div>
+             <div class="mb-4">
+                <div class="font-bold">M</div>
+                <ul>
+                    <li><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo" class="text-blue-link">Mukae ni iku yo</a></li>
                 </ul>
             </div>
             <div class="mb-4">
