Modify json structure

--- a/site/lyrics.html
+++ b/site/lyrics.html
@@ -26,6 +26,7 @@
           <div class="content py-3 text-center">Cargando...</div>
           <hr class="w-2/3 mx-auto my-5" />
           <div class="info pt-5"></div>
+          <div class="credits"></div>
         </div>
       </div>
     </main>
