--- a/site/list.html
+++ b/site/list.html
@@ -38,8 +38,7 @@
                 </div>
                 <div id="by-album-list">
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>5x20 All the BEST!!
-                            1999-2019</div>
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>5x20 All the BEST!! 1999-2019<span><svg style="width: 20px;height:20px;display:inline-block" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g id="Arrow / Caret_Down_MD"> <path id="Vector" d="M16 10L12 14L8 10" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
@@ -48,7 +47,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>untitled</div>
+                        <div class="accordion-header text-blue-secondary font-bold">untitled<span><svg style="width: 20px; height: 20px;display:inline-block; " viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" ><g id="SVGRepo_bgCarrier" stroke-width="0" ></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Arrow / Caret_Right_SM"> <path id="Vector" d="M11 9L14 12L11 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -56,7 +55,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>Tsunagu</div>
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>Tsunagu</div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -64,7 +63,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>Japonism</div>
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>Japonism</div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -74,7 +73,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>Boku no Miteiru Fuukei
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>Boku no Miteiru Fuukei
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -84,7 +83,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>5x10 All the BEST!
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>5x10 All the BEST!
                             1999-2009</div>
                         <div class="accordion-content">
                             <ul>
@@ -93,7 +92,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>truth/Kaze no mukou e
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>truth/Kaze no mukou e
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -104,7 +103,7 @@
                 </div>
                 <div id="alphabetical-list" hidden>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>B</div>
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>B</div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -114,7 +113,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>M</div>
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>M</div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo"
@@ -123,7 +122,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-link"><span class="arrow">&#9834;</span>T</div>
+                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>T</div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
