--- a/site/list.html
+++ b/site/list.html
@@ -11,6 +11,8 @@
 
     <script type="module" src="/components/header/header-component.js"></script>
     <script type="module" src="/components/footer/footer-component.js"></script>
+    <script type="module" src="/components/caret-icon/caret-icon-component.js"></script>
+
     <script type="text/javascript" src="/scripts/list.js"></script>
 </head>
 
@@ -38,7 +40,7 @@
                 </div>
                 <div id="by-album-list">
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>5x20 All the BEST!! 1999-2019<span><svg style="width: 20px;height:20px;display:inline-block" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g id="Arrow / Caret_Down_MD"> <path id="Vector" d="M16 10L12 14L8 10" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg></span></div>
+                        <div class="accordion-header text-blue-secondary font-bold">5x20 All the BEST!! 1999-2019</div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
@@ -47,7 +49,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">untitled<span><svg style="width: 20px; height: 20px;display:inline-block; " viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" ><g id="SVGRepo_bgCarrier" stroke-width="0" ></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Arrow / Caret_Right_SM"> <path id="Vector" d="M11 9L14 12L11 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg></span></div>
+                        <div class="accordion-header text-blue-secondary font-bold">untitled<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -55,7 +57,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>Tsunagu</div>
+                        <div class="accordion-header text-blue-secondary font-bold">Tsunagu<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -63,7 +65,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>Japonism</div>
+                        <div class="accordion-header text-blue-secondary font-bold">Japonism<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -73,7 +75,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>Boku no Miteiru Fuukei
+                        <div class="accordion-header text-blue-secondary font-bold">Boku no Miteiru Fuukei<span class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -83,8 +85,8 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>5x10 All the BEST!
-                            1999-2009</div>
+                        <div class="accordion-header text-blue-secondary font-bold">5x10 All the BEST!
+                            1999-2009<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
@@ -92,7 +94,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>truth/Kaze no mukou e
+                        <div class="accordion-header text-blue-secondary font-bold">truth/Kaze no mukou e<span class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -103,7 +105,7 @@
                 </div>
                 <div id="alphabetical-list" hidden>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>B</div>
+                        <div class="accordion-header text-blue-secondary font-bold">B<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -113,7 +115,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>M</div>
+                        <div class="accordion-header text-blue-secondary font-bold">M<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo"
@@ -122,7 +124,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold"><span class="arrow">&#9834;</span>T</div>
+                        <div class="accordion-header text-blue-secondary font-bold">T<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
