--- a/site/list.html
+++ b/site/list.html
@@ -40,7 +40,7 @@
                 </div>
                 <div id="by-album-list">
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">5x20 All the BEST!! 1999-2019</div>
+                        <div class="accordion-header text-blue-secondary font-bold">5x20 All the BEST!! 1999-2019<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
